<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />
    <android.support.constraint.Guideline
        android:id="@+id/guidelineMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priceAlertDescription"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTop"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
        android:textSize="22dp"/>
    <EditText
        android:id="@+id/priceTarget"
        android:hint="@string/priceAlertHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/guidelineMiddle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAlignment="center"
        android:textSize="16dp"/>
    <Button
        android:id="@+id/priceAlertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priceAlertButton"
        app:layout_constraintTop_toBottomOf="@+id/priceTarget"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:backgroundTint="@color/lightOrange"
        android:drawableLeft="@drawable/alert_icon"
        android:drawableRight="@drawable/alert_icon"
        android:textSize="16dp"/>
</android.support.constraint.ConstraintLayout>