<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:clickable="true"
        android:id="@+id/asksHeaders"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:text="@string/price"
            android:layout_height="wrap_content"
            android:textSize="20dp"/>

        <TextView
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/amount"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textSize="20dp"/>

        <TextView
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/value"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textSize="20dp"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/asksRecyclerView"
        android:scrollbars="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/asksHeaders"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
    <ProgressBar
        android:id="@+id/asksPBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />
</android.support.constraint.ConstraintLayout>